Generally completed the entire documentation

--- a/huang.tex
+++ b/huang.tex
@@ -9,10 +9,10 @@ A JUnit test fixture is a Java object. With older versions of JUnit, fixtures ha
 \par
 We have adopted \emph{JUnit version 4.12} and the library is from \emph{Maven} remote repository. In our implementation of JUnit test fixture, we  have well utilized the  \emph{@Before} and \emph{@After} method to initialize and discard objects that will be used in all other \emph{@Test} methods.
 \section{JMock}
-\par JMock is a library that supports test-driven development of Java code with mock objects.
-\par Mock objects help you design and test the interactions between the objects in your programs.
+\par \emph{JMock} is a library that supports test-driven development of Java code with mock objects.
+\par In this Lab, JMock objects can help us design and test the interactions between the objects in your programs.
 
-\par The jMock library:
+\par The jMock library has the following advantages, it
 \begin{enumerate} 
 \item makes it quick and easy to define mock objects, so you don't break the rhythm of programming.
 \item lets you precisely specify the interactions between your objects, reducing the brittleness of your tests.
