Revised an article

--- a/report.tex
+++ b/report.tex
@@ -182,7 +182,7 @@ public void testNameLongerThan49() {
 \subsection{Legal password}
 \par I construct a string--\emph{123\_abc12}--and it contains letters, digits and underline at the right length. Therefore, it's legal.
 \subsection{Illegal password}
-\par A legal password must contain all the three types: \textbf{letters}, \textbf{numbers} and \textbf{\_}. So in order to get a illegal password, there are many ways. Null password, a string without digits, a string without letters, a string without underline, a string with other special characters and a much shorter or longer one all are OK. So I design 7 methods to test. 
+\par A legal password must contain all the three types: \textbf{letters}, \textbf{numbers} and \textbf{\_}. So in order to get an illegal password, there are many ways. Null password, a string without digits, a string without letters, a string without underline, a string with other special characters and a much shorter or longer one all are OK. So I design 7 methods to test. 
 \par There maybe a small trap in checking password. Well, if we couldn't find the differences between legal name and legal password,  we'll write some wrong codes. It's because a legal password must contain all the three types but a legal name is unnecessary to satisfy the need.
 %Liu, Jiaxing above
 \section{Status checking method}
